# notify-hook

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build-release.py
ci/: before_deploy.sh  script.sh
src/: errors.rs  main.rs  payload.rs
tests/: notify_hook.rs
