[package]
name = "notify-hook"
version = "0.1.0"
authors = ["James Kominick <james.kominick@gmail.com>"]

[dependencies]
clap = "2"
error-chain = "0.11"
reqwest = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_qs = "0.2"
git2 = "0.6"
ring = "0.12"
data-encoding = "1"
self_update = { version = "0.4", optional = true }

[features]
default = []
update = ["self_update"]

